[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pystrano"
version = "1.1.1"
description = "A Python package for managing deploying Django applications (like Capistrano for Ruby)"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11 ",
    "Programming Language :: Python :: 3.12",
]
keywords = ["pystrano"]
dependencies = [
    "fabric>=3.2.2,<4.0",
    "click>=8.1.7,<9.0",
    "pyyaml>=6.0.2,<7.0",
    "python-dotenv>=1.0.1,<2.0",
]
requires-python = ">=3.12"

[project.urls]
homepage = "https://github.com/lexpank/pystrano"
issues = "https://github.com/lexpank/pystrano/issues"

[project.scripts]
pystrano = "pystrano.deploy:main"

[tool.bumpver]
current_version = "1.1.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"setup.py" = [
    "{version}",
]
"README.md" = [
    "{version}",
]

