[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pystrano"
version = "1.2.0"
description = "A Python package for managing deploying Django applications (like Capistrano for Ruby)"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
]
keywords = ["pystrano"]
dependencies = [
    "fabric>=3.2.2,<4.0",
    "click>=8.3.1,<9.0",
    "pyyaml>=6.0.3,<7.0",
    "python-dotenv>=1.2.1,<2.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
]
lint = [
    "ruff>=0.6",
    "pre-commit>=4.5.1",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["pystrano"]

[tool.coverage.run]
branch = true
source = ["pystrano"]

[tool.coverage.report]
omit = ["tests/*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[project.urls]
homepage = "https://github.com/lexpank/pystrano"
issues = "https://github.com/lexpank/pystrano/issues"

[project.scripts]
pystrano = "pystrano.deploy:main"

[tool.bumpver]
current_version = "1.2.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"setup.py" = [
    "{version}",
]
"README.md" = [
    "{version}",
]
