[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pystrano"
version = "2.0.0"
description = "Capistrano-inspired deployment automation for Django and FastAPI apps."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
keywords = [
    "pystrano",
    "deployment",
    "deploy",
    "django",
    "fastapi",
    "cli",
    "yaml",
    "capistrano",
    "ssh",
    "gunicorn",
    "systemd",
]
dependencies = [
    "fabric>=3.2.3,<4.0",
    "click>=8.4.1,<9.0",
    "pyyaml>=6.0.3,<7.0",
    "python-dotenv>=1.2.2,<2.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.1.0",
]
lint = [
    "ruff>=0.15.15",
    "pre-commit>=4.6.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["pystrano"]

[tool.coverage.run]
branch = true
source = ["pystrano"]

[tool.coverage.report]
omit = ["tests/*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[project.urls]
Homepage = "https://pystrano.com"
Documentation = "https://pystrano.com/docs"
Source = "https://github.com/pystrano/pystrano"
Issues = "https://github.com/pystrano/pystrano/issues"

[project.scripts]
pystrano = "pystrano.deploy:main"

[tool.bumpver]
current_version = "2.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"setup.py" = [
    "{version}",
]
"README.md" = [
    "{version}",
]
